# routes/routes.go
@@ -1,7 +1,12 @@
 package routes
 
-import "github.com/gin-gonic/gin"
+import (
+	"github.com/gin-gonic/gin"
+	"github.com/ngirimana/AnnounceIT/controllers"
+)
 
 func RegisterRoutes(server *gin.Engine) {
 	server.GET("/message", Message)
+
+	server.POST("/users/signup", controllers.SignUp)
 }
